# switchboard-plug-wallet

./: .gitignore  README.md  meson.build
.github/workflows/: main.yml
data/: io.elementary.switchboard-plug-payments.appdata.xml.in  meson.build  wallet.gresource.xml
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+162 more)
src/: MainView.vala  Plug.vala  SecretItemDialog.vala  SecretItemRow.vala  meson.build
src/Dialogs/: NewCardDialog.vala
src/Widgets/: CardNumberEntry.vala  SecretItemRow.vala
